<resources>
    <string name="app_name">AndroidFragments</string>
    <string name="write_something">Write something</string>
    <string name="composer_submit">Submit</string>
    <string name="main_composer">Composer</string>
    <string name="main_email_2">Email 2</string>
    <string name="main_email_1">Email 1</string>
    <string name="main_master_detail">Master / Detail</string>
    <string name="main_settings">Settings</string>
    <string name="main_dialog">Dialog</string>
</resources>
