<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:background="@android:color/holo_green_dark"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:id="@+id/master_detail_composer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_composer" />

        <Button
            android:id="@+id/master_detail_email1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_email_1" />

        <Button
            android:id="@+id/master_detail_email2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_email_2" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorAccent" />
</LinearLayout>