<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Menu bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <Button
            android:id="@+id/main_master_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_master_detail" />

        <Button
            android:id="@+id/main_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_settings" />

        <Button
            android:id="@+id/main_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_dialog" />

        <TextView
            android:id="@+id/main_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <!-- Separator line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#999999" />

    <!-- Fragment placeholder -->
    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorAccent" />
</LinearLayout>